[package]
name = "leds"
version = "0.1.0"
authors = ["tommyshem <1952659+tommyshem@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "leds"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ac72adbe6db8900c41681b759ff62a11f2915916"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
